--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # developer tmp files
-/works.js
-/ToDo.md
+/Works.md
 
 # dependencies
 /node_modules
