--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "eslint-config-airbnb": "^17.1.1",
     "js-md5": "^0.7.3",
     "lodash": "^4.17.11",
     "popper.js": "^1.15.0",
